--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bcrypt": "^5.0.0",
+    "cloudinary": "^1.37.3",
     "connect-session-sequelize": "^7.0.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -21,6 +22,7 @@
     "express-session": "^1.17.1",
     "imgbb-uploader": "^1.5.1",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.22",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
