--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "imgbb-uploader": "^1.5.1",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.22",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "eslint": "^7.12.1",
